@@ -1,3 +1,7 @@
+2019-11-08  Iain Sandoe  <iain@sandoe.co.uk>
+
+	* config/darwin-protos.h: Add include quard.
+
 2019-11-08  Andrew MacLeod  <amacleod@redhat.com>
 
 	* range-op.h (range_operator::fold_range): Return result in a
